--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!--    <link rel="import" src="button.html">-->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
